// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColourInput /> should have some hintText 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          id="id"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
  <p
    class="reset_blockText__6swfdsc useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_blockText__6swfdsc useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_2__w6to7i2 reset_blockText__6swfdsc useBoxStyles_makeResponsiveStyle_key_bp__7o6k064k useBoxStyles_makeResponsiveStyle_key_bp__7o6k0684 HintText_hintText__w01siw0 InputState_natural_default_colour__9z39d74"
  >
    hint text
  </p>
</div>
`;

exports[`<ColourInput /> should match snapshot 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          id="id"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when active 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(236, 64, 64);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #ec4040
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#ec4040"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_activeBorderColour__9z39d71"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_activeBorderColour__9z39d71"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_activeColour__9z39d70 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_activeBorderColour__9z39d71 InputState_activeBorderColour__9z39d71"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when loading 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_width_none__7o6k06dl ProgressSpinner_size_medium_circular__5j3teub ProgressSpinner_colours_primary__5j3teu5 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo withEnhancedInput_iconRoot__bd4oide withEnhancedInput_suffixIcon__bd4oidg withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06dy useBoxStyles_overflow_hidden__7o6k06dt ProgressSpinner_circular__5j3teu1"
          viewBox="25 25 50 50"
        >
          <circle
            class="ProgressSpinner_path__5j3teu3 ProgressSpinner_size_medium_path__5j3teuc"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke-miterlimit="10"
          />
        </svg>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          aria-busy="true"
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__bd4oidd"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_error_default_borderColour__9z39d7d"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_error_default_borderColour__9z39d7d"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_error_default_colour__9z39d7c useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_error_default_borderColour__9z39d7d InputState_error_default_borderColour__9z39d7d"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_error_default_borderColour__9z39d7d"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_error_default_borderColour__9z39d7d"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_error_default_colour__9z39d7c useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_error_default_borderColour__9z39d7d InputState_error_default_borderColour__9z39d7d"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched and valid 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_success_default_borderColour__9z39d77"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_success_default_borderColour__9z39d77"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_success_default_colour__9z39d76 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_success_default_borderColour__9z39d77 InputState_success_default_borderColour__9z39d77"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot with both icons 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <i
        class="useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo withEnhancedInput_iconRoot__bd4oide withEnhancedInput_suffixIcon__bd4oidg withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06dy useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__bd4oidd"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot with suffix icon 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
    >
      <i
        class="useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo withEnhancedInput_iconRoot__bd4oide withEnhancedInput_suffixIcon__bd4oidg withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06dy useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_position_relative__7o6k06dp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexWrap_nowrap__7o6k06f3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f8"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_none__7o6k06dl useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eb useBoxStyles_flexShrink_0__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fk ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_width_none__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06dy useBoxStyles_width_none__7o6k06dl useBoxStyles_textAlign_left__7o6k06dq useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dn"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_width_none__7o6k06dl useBoxStyles_flexGrow_1__7o6k06f0 ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_position_relative__7o6k06dp withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__bd4oidd"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dz useBoxStyles_width_full__7o6k06dk useBoxStyles_height_full__7o6k06dm useBoxStyles_position_absolute__7o6k06dn useBoxStyles_textAlign_left__7o6k06dq useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06e1 useBoxStyles_width_none__7o6k06dl useBoxStyles_position_absolute__7o6k06dn useBoxStyles_pointerEvents_none__7o6k06fo NotchedBase_placeholder_default__1r7zdxgs InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;
